footer section added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <body>
         <div class="box">
             <div class="spinner"></div>
+            <div class="spinner2"></div>
+        </div>
+        <div class="footer">
+            <p>&copy; Created by Prabeen</p>
         </div>
     </body>
 </html>
